--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <div class="container">
     <div class="one">
       <h1 class="one">Hey
-        <span id="name">Lydia</span>
+        <span id="name">Hemadri !!</span>
       </h1>
       <p class="two" id="greetingText">I really like your name btw!</p>
     </div>
     <div class="three">
-      <p>It's your birthday!!! :D</p>
+      <p>It's your birthday !!! 🎂</p>
     </div>
     <div class="four">
       <div class="text-box">
@@ -32,9 +32,10 @@
       <p class="idea-1">That's what I was going to do.</p>
       <p class="idea-2">But then I stopped.</p>
       <p class="idea-3">I realised, I wanted to do something
-        <strong>special</strong>.</p>
-      <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special
+        <strong>unique</strong>.</p>
+      <p class="idea-4">Umm... Are you a camera ??</p>
+      <p class="idea-41">...🤔.. why ? ...</p>
+      <p class="idea-5">Because when I look at you, I smile 
         <span>:)</span>
       </p>
       <p class="idea-6">
