--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p class="idea-1">That's what I was going to do.</p>
       <p class="idea-2">But then I stopped.</p>
       <p class="idea-3">I realised, I wanted to do something
-        <strong>unique</strong>.</p>
+        <strong>special</strong>.</p>
       <p class="idea-4">Umm... Are you a camera ??</p>
       <p class="idea-41">...🤔.. why ? ...</p>
       <p class="idea-5">Because when I look at you, I smile 
@@ -47,8 +47,8 @@
       <img src="img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h3 class="wish-hbd">Happy Birthday</h3>
+        <h5 id="wishText">May you get <img src="img/integral.png" style="vertical-align:middle; margin:50px 0px"> success and happiness in life !!</h5>
       </div>
     </div>
     <div class="seven">
